git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@367 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -720,7 +720,7 @@ Don't call us, we'll call you."/>
 			page if you also use project or organization permissions.
 		-->
 		
-		<add key="EnableWhatsNewPage" value="0" />
+		<add key="EnableWhatsNewPage" value="1" />
 		<add key="WhatsNewPageIntervalInSeconds" value="30" />
 		
 		<!--
@@ -846,7 +846,16 @@ Don't call us, we'll call you."/>
 		<!--
 			<add key="DisplayTimeOffsetInHours" value="0"/>
 		-->
-		
+
+		<!--
+			Work around a problem that some users are having when email addresses are in the format:
+				Corey Trager <ctrager@yahoo.com>
+			instead of
+				ctrager@yahoo.com
+		-->
+		<!--
+			<add key="StripDisplayNameFromEmailAddress" value="1"/>
+		-->
 		      
 		<!--      
 			 UTF-8                 
