git-svn-id: https://btnet.svn.sourceforge.net/svnroot/btnet@369 25256582-783d-0410-8f03-f819f29fef2d

--- a/Web.config
+++ b/Web.config
@@ -714,14 +714,17 @@ Don't call us, we'll call you."/>
 		<add key="EnableSeen" value="0"/>
 		<!--
 			Enabling this adds a "news" link to the menu that goes across the page.
-			This is an experimental feature.  Click on the "news" page, leave it up, 
-			and it will refresh itself as people add and change bugs.
+			Click on the "news" page, leave it up, and it will refresh itself as people 
+			add and change bugs. 
+			
+			IMPORTANT:
 			It doesn't obey any permissions, so you probably don't want to use this
 			page if you also use project or organization permissions.
 		-->
 		
 		<add key="EnableWhatsNewPage" value="1" />
-		<add key="WhatsNewPageIntervalInSeconds" value="30" />
+		<add key="WhatsNewPageIntervalInSeconds" value="20" />
+		<add key="WhatsNewMaxItemsCount" value="200" />
 		
 		<!--
 			Something I use for debugging, in conjunction with the view_memory_log.aspx.
